WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129254
[CSS Regions] Relative positioned elements overflowing the region do not get painted into the next tile
https://bugs.webkit.org/show_bug.cgi?id=129254
Summary
[CSS Regions] Relative positioned elements overflowing the region do not get ...
Radu Stavila
Reported
2014-02-24 04:39:59 PST
Created
attachment 225051
[details]
Test-case Relative positioned elements overflowing the region do not get painted into the next tile unless the region itself also reaches that tile.
Attachments
Test-case
(1.04 KB, text/html)
2014-02-24 04:39 PST
,
Radu Stavila
no flags
Details
Patch
(6.40 KB, patch)
2014-02-24 08:38 PST
,
Radu Stavila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radu Stavila
Comment 1
2014-02-24 08:38:34 PST
Created
attachment 225070
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-24 12:45:40 PST
Comment on
attachment 225070
[details]
Patch Clearing flags on attachment: 225070 Committed
r164600
: <
http://trac.webkit.org/changeset/164600
>
WebKit Commit Bot
Comment 3
2014-02-24 12:45:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug